# ChangeLog for dev-util/rapidsvn
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.50 2007/11/25 14:39:08 opfer Exp $

  25 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  rapidsvn-0.9.4.ebuild:
  stable x86, bug 186809

  24 Nov 2007; Samuli Suominen <drac@gentoo.org> rapidsvn-0.9.4.ebuild:
  amd64 stable wrt #186809

  24 Nov 2007; nixnut <nixnut@gentoo.org> rapidsvn-0.9.4.ebuild:
  Stable on ppc wrt bug 186809

  24 Nov 2007; Markus Rothe <corsair@gentoo.org> rapidsvn-0.9.4.ebuild:
  Stable on ppc64; bug #186809

  12 Oct 2007; Ryan Hill <dirtyepic@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Lock wxGTK to 2.6.

  10 Jul 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Updated desktop category and added desktop_database_update to pkg_post
  for conformance to desktop policy.

  26 Jun 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Fixes for bug 180236 as well as desktop and icon fixes.  Set apr deps
  based on subversion and upstream (handle apr-1 correctly).

  08 Apr 2007; Ryan Hill <dirtyepic@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Don't hardcode wx-config, use wxwidgets.eclass.

  01 Apr 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Minor correction to apr dep, should resolve bug 169414.

  14 Mar 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Updated depends and configure for bug 169414.

  05 Mar 2007; Marius Mauch <genone@gentoo.org> rapidsvn-0.9.3.ebuild,
  rapidsvn-0.9.4.ebuild:
  Replacing einfo with ewarn

*rapidsvn-0.9.4 (10 Jan 2007)

  10 Jan 2007; Steve Arnold <nerdboy@gentoo.org> rapidsvn-0.9.3.ebuild,
  +rapidsvn-0.9.4.ebuild:
  Minor QA fix and version bump to current stable upstream release.

  08 Sep 2006; Steve Arnold <nerdboy@gentoo.org>