@@ -11,14 +11,14 @@ EBUILD rapidsvn-0.9.3.ebuild 3046 RMD160 8d8b79f39f063ef8c75863b57b54ef093bbf407
 MD5 6572d96fb9e7701170a626f8b847d572 rapidsvn-0.9.3.ebuild 3046
 RMD160 8d8b79f39f063ef8c75863b57b54ef093bbf407a rapidsvn-0.9.3.ebuild 3046
 SHA256 0dbc5c68dcbf13e82f6fa34f6206e0b44f9da577c8435d96c9cf3c5bd916ed3c rapidsvn-0.9.3.ebuild 3046
-EBUILD rapidsvn-0.9.4.ebuild 3060 RMD160 01e2a51d3122823babb0b48a5ae4b209c8d6db29 SHA1 82b311d23fb9e6d2ca86d84067e4115b1b21225e SHA256 e85a200b9d71073a29e8ea7cdfa5c3848e608a5a4c8664b2a24c18dc6b8b97c6
-MD5 33616a3fe338f73bfeb56de3a93bc288 rapidsvn-0.9.4.ebuild 3060
-RMD160 01e2a51d3122823babb0b48a5ae4b209c8d6db29 rapidsvn-0.9.4.ebuild 3060
-SHA256 e85a200b9d71073a29e8ea7cdfa5c3848e608a5a4c8664b2a24c18dc6b8b97c6 rapidsvn-0.9.4.ebuild 3060
-MISC ChangeLog 8108 RMD160 e45448927f35adcbfe729b811cc57740387ab3fa SHA1 681bd4dda1f505c66639b1cf12831bde3cd5d7c1 SHA256 b60218eb44c2e6feb02e7649d8dfb7705f2b124b9ae111596ca414d84aa92020
-MD5 466026b67d4a1d78f7d06e2d3bdd3ad4 ChangeLog 8108
-RMD160 e45448927f35adcbfe729b811cc57740387ab3fa ChangeLog 8108
-SHA256 b60218eb44c2e6feb02e7649d8dfb7705f2b124b9ae111596ca414d84aa92020 ChangeLog 8108
+EBUILD rapidsvn-0.9.4.ebuild 3007 RMD160 56d370aa9cfce75d56747d9041b2308d961ac692 SHA1 02e694702a86a413f4e80a08a8939d7f29969a02 SHA256 8d818465839eede389ff0d069f88569c60c95d833e93beb039a100ba31cd775a
+MD5 c91447613a2fb6f639550aa929b0ee37 rapidsvn-0.9.4.ebuild 3007
+RMD160 56d370aa9cfce75d56747d9041b2308d961ac692 rapidsvn-0.9.4.ebuild 3007
+SHA256 8d818465839eede389ff0d069f88569c60c95d833e93beb039a100ba31cd775a rapidsvn-0.9.4.ebuild 3007
+MISC ChangeLog 8267 RMD160 67a442be8f61b94a808f96dbe05f9252fab1d74e SHA1 7837c2e4ee215239e02deaffaa5d69a885e8caf0 SHA256 c1bfeff0bb931dcdf919b5dbeb4931f2bd8a827e9d91351a36a81f35397d81e3
+MD5 42adcef2386e5386e161f7f779774aa1 ChangeLog 8267
+RMD160 67a442be8f61b94a808f96dbe05f9252fab1d74e ChangeLog 8267
+SHA256 c1bfeff0bb931dcdf919b5dbeb4931f2bd8a827e9d91351a36a81f35397d81e3 ChangeLog 8267
 MISC metadata.xml 518 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b SHA1 6b9c6a8c99c7dd184cf048b4e306f0a0e5f81788 SHA256 b7e173df02d2585da2771a95e6acd8ae824e61887087747d227b9ea07bf0b435
 MD5 35d9a0711821962697d1e9a351f7ea58 metadata.xml 518
 RMD160 b9c97307a72d2c0ae05deb166229ffc603d8855b metadata.xml 518
@@ -32,7 +32,7 @@ SHA256 1a04b081bdf76410542fb35f3388a137aeb0df9c00b3408631105e916f6e04e6 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFHSYlhNQqtfCuFneMRAlhIAKCCwVUezQLH6/jiU04u+z3yjrmuvQCeKvhx
-/spiUZ8bmgzfDN/U2/SV/bs=
-=oXPO
+iD8DBQFHSY2eNQqtfCuFneMRAuthAKCNIRweyoIsOu0tK4u/QhdgWLh8WQCgnTLi
+glbhpE5ToMMfCu6gCh4HxfA=
+=nW9U
 -----END PGP SIGNATURE-----
